added - '--tensor-parallel-size=3'

--- a/servingruntime-inferenceservice.yaml
+++ b/servingruntime-inferenceservice.yaml
@@ -21,6 +21,7 @@ spec:
         - '--port=8080'
         - '--model=/poro'
         - '--served-model-name={{.Name}}'
+        - '--tensor-parallel-size=3'
       command:
         - python
         - '-m'
