--- a/servingruntime-inferenceservice-gaudi-poro2.yaml
+++ b/servingruntime-inferenceservice-gaudi-poro2.yaml
@@ -86,11 +86,11 @@ spec:
         limits:
           cpu: '4'
           memory: 20Gi
-          nvidia.com/gpu: '2'
+          habana.ai/gaudi: '2'
         requests:
           cpu: '2'
           memory: 16Gi
-          nvidia.com/gpu: '2'
+          habana.ai/gaudi: '2'
       runtime: poro
 ---
 apiVersion: route.openshift.io/v1
